--- a/it162/menumaker/index.html
+++ b/it162/menumaker/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang=''>
+<html lang="">
 <head>
-   <meta charset='utf-8'>
+   <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>MenuMaker</title>
@@ -16,17 +16,17 @@
 
 <div id="cssmenu">
   <ul>
-     <li><a href="../index.php"><span><i class="fa fa-fw fa-bank"></i> WEB120</span></a></li>
-     <li><a href="index.php"><span><i class="fa fa-fw fa-home"></i> BIG</span></a></li>
-     <li><a href="flexbox.php"><span><i class="fa fa-fw fa-cube"></i> Flexbox</span></a></li>
-     <li><a href="galleries.php"><span><i class="fa fa-fw fa-camera-retro"></i> Galleries</span></a></li>
-     <li><a href="#"><span><i class="fa fa-fw fa-chevron-down"></i> Google</span></a>
-        <ul>
-           <li><a href="calendar.php"><span><i class="fa fa-fw fa-calendar"></i> Calendar</span></a></li>
-           <li><a href="map.php"><span><i class="fa fa-fw fa-map-o"></i> Map</span></a></li>
-           <li><a href="youtube.php"><span><i class="fa fa-fw fa-youtube-square"></i> YouTube</span></a></li>
-        </ul>
-     </li>
+      <li><a href="../index.php"><span><i class="fa fa-fw fa-bank"></i> WEB120</span></a></li>
+      <li><a href="index.php"><span><i class="fa fa-fw fa-home"></i> BIG</span></a></li>
+      <li><a href="flexbox.php"><span><i class="fa fa-fw fa-cube"></i> Flexbox</span></a></li>
+      <li><a href="galleries.php"><span><i class="fa fa-fw fa-camera-retro"></i> Galleries</span></a></li>
+      <li><a href="#"><span><i class="fa fa-fw fa-chevron-down"></i> Google</span></a>
+         <li><a href="calendar.php"><span><i class="fa fa-fw fa-calendar"></i> Calendar</span></a></li>
+         <li><a href="map.php"><span><i class="fa fa-fw fa-map-o"></i> Map</span></a></li>
+         <li><a href="youtube.php"><span><i class="fa fa-fw fa-youtube-square"></i> YouTube</span></a></li>
+      </li>   
+      </ul>
+   <ul>
      <li><a href="shoppingcarts.php"><span><i class="fa fa-fw fa-shopping-basket"></i> Shopping Carts</span></a></li>
      <li><a href="siteapp.php"><span><i class="fa fa-fw fa-html5"></i> Site vs App</span></a></li>
      <li><a href="webcam.php"><span><i class="fa fa-fw fa-eye"></i> Web Cam</span></a></li>
